# xtd_dev_tools

./: CMakeLists.txt  TODO.txt
properties/: startup.cpp  target_properties.cmake
src/: main_form.cpp  main_form.hpp  pch.hpp
src/enum_stringifier_form/: enum_parser.hpp  enum_stringifier_form.cpp  enum_stringifier_form.hpp
